-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b83
-
sparc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8141913 | emb-9 | Igor Veresov | P1 | Resolved | Fixed | team |
We observed a lot of Nightly failures on SPARC after 8075093 "Enable UseFPUForSpilling support on SPARC" changes.
Backout these changes until 8135034 is resolved.
Backout these changes until 8135034 is resolved.
- backported by
-
JDK-8141913 Reverse changes from 8075093
-
- Resolved
-
- duplicates
-
JDK-8135036 Backout 8075093 changes until 8135034 is resolved
-
- Closed
-
- relates to
-
JDK-8135034 A lot of Nightly failures on SPARC after 8075093 changes
-
- Closed
-
-
JDK-8075093 Enable UseFPUForSpilling support on SPARC
-
- Closed
-