8135035: Reverse changes from 8075093

8075093 turn on FPU spilling that need to be stabilized first

Reviewed-by: kvn